--- a/Docs/Documentation.tex
+++ b/Docs/Documentation.tex
@@ -15,11 +15,7 @@
 \newpage
 
 
-\section{Grundidee}
-
-\subsection{Konzept Benutzerfreundlichkeit}
-\subsection{Spiegel mit integriertem Display}
-
+\input{kapitel/Grundidee.tex}
 
 \section{Aufbau}
 \subsection{Strukturierung}
@@ -31,7 +27,7 @@ Für die optinalen Erweiterungen würde man je nachdem welches Feature gewünsch
 Notizen: Später eintragen welches Raspi Modell, Display, Glass verwendet wurde
 
 \section{Software}
-\subsection{Prereuisites}
+\subsection{Prerequisites}
 \begin{itemize}
 \item Node.js (Javascript runtime)
 \item Angular
