added Controller.md with ideas of WebAPI

--- a/Docs/kapitel/Software.tex
+++ b/Docs/kapitel/Software.tex
@@ -8,7 +8,7 @@
 \end{itemize}
 
 \subsection{Frontend - SmartMirrorWeb}
-Wir haben unser Frontend mithilfe von Angular 9. Für uns war dies eine Neue Erfahrung, da wir noch nie zuvor damit gearbeitet haben. Das Frontend soll sich lediglich um die Anzeige der Daten kümmern und folgende Funktionen übernehmen:
+Wir haben unser Frontend mithilfe von Angular 9 entwickelt. Für uns war dies eine Neue Erfahrung, da wir noch nie zuvor damit gearbeitet haben. Das Frontend soll sich lediglich um die Anzeige der Daten kümmern und folgende Funktionen übernehmen:
 \begin{itemize}
 \item Daten vom Backend (SmartMirror.WebApi) anfragen
 \begin{itemize}
