--- a/Docs/Documentation.tex
+++ b/Docs/Documentation.tex
@@ -1,9 +1,15 @@
 \documentclass[a4paper,11pt]{article}
 
 % packages
+% Eurosymbol
+\usepackage{eurosym}
+%zum anzeigen von Grafiken
+\usepackage{graphicx}
 % Sprache Deutsch
 \usepackage[english,german]{babel}
-% 
+% für Referenzen
+\usepackage{hyperref}
+
 \author{Baris,Tikir, Leon Dodrimong}
 \title{Smart Mirror}
 
