--- a/Docs/kapitel/Erweiterungen.tex
+++ b/Docs/kapitel/Erweiterungen.tex
@@ -1,14 +1,22 @@
 
-\section{Erweiterungen}
-\subsection{API's}
-
+\section{Funktionen}\label{Funktionen}
+\subsection{Grundfunktionen}
 \begin{itemize}
-\item Google Kalender
-\item Todoist
-\item BVG
-\item Wetter
+\item Daten von externen API's abfragen
+\item Daten von externen API's anzeigen (Widgets)
+\item Einstellungen über ein Web Frontend vornhemen
+\item Schnittstelle für andere Erweiterungen (externe Clients)
+\item ...und natürlich auch die Grundfunktion spiegeln nicht vergessen
 \end{itemize}
-\subsection{Hardware}
+
+%
+%\begin{itemize}
+%\item Google Kalender
+%\item Todoist
+%\item BVG
+%\item Wetter
+%\end{itemize}
+\subsection{Extras}
 \begin{itemize}
 \item Face Recognition
 \item Voice Control
