--- a/Docs/kapitel/Aufbau.tex
+++ b/Docs/kapitel/Aufbau.tex
@@ -1,8 +1,11 @@
 \section{Aufbau}
-\subsection{Strukturierung}
-Notizen: Dagramme und erklärungen der Funktionsweise\\\
+dem Aufbau der Software haben wir aufgrund der Vielfalt ein eigenes Kapitel gewidmet. (\ref{Software})
+\subsection{Hardware - Spiegel}
+
 \subsection{Materialien}
 Der Spiegel besteht aus einem Einwegspiegelglass, welches von einer Seite spiegelt und von der anderen Seite reflektiert. Außerdem haben wir einen Holzrahmen, welcher aus Fassung für das Spiegelglass dient, genutzt. Für die Technik haben wir ein Display für die Anzeigen , ein RasperryPi für die Steuerung und die nötigen Verbindungskabel, wie Spannungsversorgung und Videokabel (HDMI) zur Übertragung der Videosignals zum Display, eingesetzt.\\\
 Für die optinalen Erweiterungen würde man je nachdem welches Feature gewünscht ist, noch eine Picamera (für Facerecognition), RasperryPi Bewegungssensor (Bewegungserkennung)\footnote{\textit{ Raspberry Pi Infrarot Bewegungsmelder:} https://www.reichelt.de/raspberry-pi-infrarot-bewegungsmelder-hc-sr501-rpi-hc-sr501-p224216.html?\&nbc=1}, Gesture Sensor (Gestiksteuerung)\footnote{\textit{3D Gesture Tracking Shield for Raspberry Pi:}  http://wiki.seeedstudio.com/3D-Gesture-Tracking-Shield-for-Raspberry-Pi-MGC3130/} oder ein kleines Mikrophone zur Sprachsteuerung \footnote{\textit{Ansteckmikrofon über Klinke:} https://www.amazon.de/dp/B073GJQKL1/ref=psdc\_1384055031\_t1\_B07WQFNVVQ}
 \\\\\\
-Notizen: Später eintragen welches Raspi Modell, Display, Glass verwendet wurde
+\paragraph{Kosten}
+Da der SmartMirror für Jederman sein soll, darf dieser auch nicht das Budget eines Einzelnen sprengen. Daher hatten wir auch im Hinterkopf, dass die Koponenten nicht zu teuern sein dürfen.\\\
+Der RasperryPi kostet ca. \EUR{35}, Das Glass ist etwas teurer mit ca.\EUR{80}. Der Rahmen ca. \EUR{10} - \EUR{20} je nachdem welches Design gewünscht ist. Mit Kabeln ca. \EUR{10} läge der Gesamtpreis für das Material bei ca. \EUR{140}. Wenn man überlegt, dass ein Normaler Spiegel ca. \EUR{80}-\EUR{100} kostet, recht preiswert ist.
