--- a/Docs/Documentation.tex
+++ b/Docs/Documentation.tex
@@ -29,6 +29,7 @@
 
 \input{kapitel/Erweiterungen.tex}
 
+\input{kapitel/Tests.tex}
 
 \section{Über uns}
 Wir sind zwei Studenten, Baris Tikir und Leon Dodrimong, von der HTW - Hochschule für
