--- a/Docs/Documentation.tex
+++ b/Docs/Documentation.tex
@@ -32,13 +32,25 @@
 \input{kapitel/Tests.tex}
 
 \section{Über uns}
-Wir sind zwei Studenten, Baris Tikir und Leon Dodrimong, von der HTW - Hochschule für
-Technik und Wirtschaft Berlin aus dem Fachbereich der Ingenieurwissenschaften und
-Technik. 
+Wir sind zwei Studenten, Baris Tikir und Leon Dodrimong, von der HTW - Hochschule für Technik und Wirtschaft Berlin aus dem Fachbereich der Ingenieurwissenschaften und Technik. Wir befinden uns zur Zeit im dritten Semester. Wir beiden lernten uns über das Studium kennen, welches wir beide im Wintersemester 2018/19 starteten.
 
-
+\newpage{}
 \section{Anhang}
+\subsection{Diagramme}
+\label{UseCase}
+\begin{figure}[h]
+\centering
+\includegraphics[width=110mm]{pictures/Use-Case-Diagramm.png}
+\caption{Use-Case-Diagramm}
+\end{figure}
+\label{Komponentendiagramm}
+\begin{figure}[h]
+\centering
+\includegraphics[width=130mm]{pictures/KomponentenDiagramm.png}
+\caption{Komponentendiagramm-Diagramm}
+\end{figure}
+\newpage
 \subsection{Verweise}
-
+\subsection{Anmerkungen}
 
 \end{document}
